Fixing UI: Scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 
 @layer base{
     body{ 
-        @apply bg-kodakPurple-10 text-kodakPurple-0.5 h-screen w-screen font-roboto 
+        @apply bg-kodakPurple-10 text-kodakPurple-0.5 h-screen w-screen font-roboto !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-kodakPurple-1;
     }
 }
 @layer components{
